# taskApi/docs/swagger.json
@@ -16,26 +16,6 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/health": {
-            "get": {
-                "description": "Checks if service is up",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tasks"
-                ],
-                "summary": "Health of service",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.HealthResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/task": {
             "post": {
                 "description": "Create a new task and send it to the queue",
@@ -121,14 +101,6 @@
         }
     },
     "definitions": {
-        "model.HealthResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "model.TaskRequest": {
             "type": "object",
             "properties": {
