# taskData/response/health.go
@@ -1,6 +1,5 @@
 package response
 
-// HealthResponse Healthcheck response
 type HealthResponse struct {
 	MESSAGE string `json:"message"`
 }
